--- a/recruiter-server/views/layout/header.ejs
+++ b/recruiter-server/views/layout/header.ejs
@@ -35,8 +35,11 @@
     }
     .forgradient {
       background: linear-gradient(to right, #a1c9fa, #0044ff);
-      
     }
+    .gradientyandb {
+      background: linear-gradient(to right, #e8f484,#a1c9fa );
+    }
+
   </style>
 </head>
 <body class="blue-bg-light font-sans">
@@ -50,6 +53,7 @@
           <li><a href="/recruiter/home" class="hover:text-blue-900 font-medium transition-colors duration-300">Home</a></li>
           <li><a href="/recruiter/companies" class="hover:text-blue-900 font-medium transition-colors duration-300">Companies</a></li>
           <li><a href="/recruiter/jobs" class="hover:text-blue-900 font-medium transition-colors duration-300">Jobs</a></li>
+          <li><a href="/recruiter/internships" class="hover:text-blue-900 font-medium transition-colors duration-300">Internships</a></li>
           <li><a href="/recruiter/profile" class="hover:text-blue-900 font-medium transition-colors duration-300">Profile</a></li>
         </ul>
       </nav>
