--- a/recruiter-server/views/home.ejs
+++ b/recruiter-server/views/home.ejs
@@ -64,7 +64,7 @@
         <h2 class="text-3xl font-bold text-center text-blue-800 mb-12">Powerful Recruiting Tools</h2>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
-            <div class="shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 hover-grow border-t-4 border-blue-600 max-w-md mx-auto">
+            <div class="bg-white shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 hover-grow border-t-4 border-blue-600 max-w-md mx-auto">
                 <div class="h-48 overflow-hidden">
                     <img src="https://cdn.pixabay.com/photo/2019/01/19/19/22/recruitment-3942378_640.jpg" 
                         alt="Job Management" 
@@ -77,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 hover-grow border-t-4 border-blue-600 max-w-md mx-auto">
+            <div class="bg-white shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 hover-grow border-t-4 border-blue-600 max-w-md mx-auto">
               <div class="h-48 overflow-hidden">
                   <img src="https://www.foundit.in/career-advice/wp-content/uploads/2022/03/interview-question-and-answer-for-hr-recruiter-1068x559.jpg" 
                       alt="Job Management" 
@@ -90,7 +90,7 @@
               </div>
           </div>
 
-            <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 hover-grow border-t-4 border-yellow-400 max-w-md mx-auto">
+            <div class="bg-white shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 hover-grow border-t-4 border-yellow-400 max-w-md mx-auto">
                 <div class="h-48 overflow-hidden">
                     <img src="https://www.shutterstock.com/image-vector/real-estate-developer-entrepreneur-concept-600nw-487692952.jpg" alt="Company Profiles" class="w-full h-full object-cover rounded-none"/>
                 </div>
