--- a/recruiter-server/views/jobs.ejs
+++ b/recruiter-server/views/jobs.ejs
@@ -1,2 +1,16 @@
 <%- include('layout/header') %>
+
+<% if (successMessage) { %>
+    <div id="toast" class="fixed top-5 right-5 bg-green-500 text-white p-3 rounded-md shadow-md mt-20">
+        <%= successMessage %>
+    </div>
+    <script>
+        setTimeout(() => {
+            document.getElementById("toast").style.display = "none";
+        }, 3000);
+    </script>
+<% } %>
+
+<h2 class="font-bold mt-10 flex justify-center font-sans text-xl">Here is your list of recently added Jobs</h2>
+
 <%- include('layout/footer') %>
