--- a/recruiter-server/views/companies.ejs
+++ b/recruiter-server/views/companies.ejs
@@ -1,30 +1,55 @@
 <%- include('layout/header') %>
 
-<h2>Here is your list of recently added Companies</h2>
+<% if (successMessage) { %>
+    <div id="toast" class="fixed top-5 right-5 bg-green-500 text-white p-3 rounded-md shadow-md mt-20">
+        <%= successMessage %>
+    </div>
+    <script>
+        setTimeout(() => {
+            document.getElementById("toast").style.display = "none";
+        }, 3000);
+    </script>
+<% } %>
 
-<table>
-    <thead>
-        <tr>
-            <th>Logo</th>
-            <th>Name</th>
-            <th>Date</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% companies.forEach(company => { %>
-            <tr>
-                <td><img src="<%= company.logo %>" alt="<%= company.name %>" width="40"></td>
-                <td><%= company.name %></td>
-                <td><%= company.date %></td>
-                <td> 
-                    <button>...</button>
-                </td>
-            </tr>
-        <% }) %>
-    </tbody>
-</table>
-<br><br>
+<h2 class="font-bold mt-10 flex justify-center font-sans text-xl">Here is your list of recently added Companies</h2>
+
+<section class="my-10 flex justify-center">
+    <div class="w-full max-w-4xl">
+        <table class="w-full text-left border-collapse border border-gray-300">
+            <thead>
+                <tr class="text-gray-700 bg-gray-200">
+                    <th class="px-6 py-3 border border-gray-300">Logo</th>
+                    <th class="px-6 py-3 border border-gray-300">Name</th>
+                    <th class="px-6 py-3 border border-gray-300">Website</th>
+                    <th class="px-6 py-3 border border-gray-300">Location</th>
+                    <th class="px-6 py-3 border border-gray-300">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% if (companies.length > 0) { %>
+                    <% companies.forEach(company => { %>
+                        <tr class="hover:bg-gray-100">
+                            <td class="px-6 py-4 border border-gray-300">
+                                <img src="<%= company.logo %>" alt="Company Logo" class="h-10 w-10 rounded-full">
+                            </td>
+                            <td class="px-6 py-4 border border-gray-300"><%= company.companyName %></td>
+                            <td class="px-6 py-4 border border-gray-300">
+                                <a href="<%= company.website %>" class="text-blue-500 hover:underline" target="_blank">Visit</a>
+                            </td>
+                            <td class="px-6 py-4 border border-gray-300"><%= company.location %></td>
+                            <td class="px-6 py-4 border border-gray-300">
+                                <button class="text-blue-500 hover:underline">View</button>
+                            </td>
+                        </tr>
+                    <% }) %>
+                <% } else { %>
+                    <tr>
+                        <td colspan="5" class="px-6 py-4 text-center text-gray-500">No companies added yet.</td>
+                    </tr>
+                <% } %>
+            </tbody>
+        </table>
+    </div>
+</section>
 
 <%- include('layout/footer') %>
-
