--- a/applicant-server/views/internship-list.ejs
+++ b/applicant-server/views/internship-list.ejs
@@ -15,11 +15,11 @@
             <a href="/" class="text-black text-3xl font-bold transition-transform hover:scale-105 duration-300 ml-2">Go<span class="text-yellow-400">Hire</span></a>
             
             <div class="relative w-1/3 group">
-                <input type="text" placeholder="Search for Opportunities" class="w-full p-3 rounded-full border-2 border-blue-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition-all duration-300 shadow-md placeholder:text-gray-700">
+                <input id="search-space" type="text" placeholder="Search for Opportunities" class="w-full p-3 rounded-full border-2 border-blue-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition-all duration-300 shadow-md placeholder:text-gray-700">
                 <div class="absolute right-3 top-3.5 text-yellow-500">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="4">
+                  <a href="/search"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="4">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                    </svg>
+                    </svg></a>
                 </div>
                 
             </div>
@@ -163,6 +163,12 @@
         } else {
             navbar.classList.remove('py-3', 'bg-blue-700', 'shadow-2xl');
             navbar.classList.add('p-5');
+        }
+    });
+
+    document.getElementById('search-space').addEventListener("keydown", function(event) {
+        if (event.key === "Enter") { 
+            window.location.href = "/search";
         }
     });
 
