--- a/applicant-server/views/signup.ejs
+++ b/applicant-server/views/signup.ejs
@@ -25,7 +25,7 @@
         <button class="toggle-btn active" id="candidate-btn">As Candidate</button>
       </div>
 
-      <form action="/signup" method="POST" class="signup-form">
+      <form action="/auth/signup" method="POST" class="signup-form">
         <div class="form-row">
           <div class="form-group">
             <label for="firstName">First Name <span class="required">*</span></label>
